deploys/soft-mxb-cc.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-soft-mxb-cc-redirectschema@kubernetescrd
  name: soft-mxb-cc-https-ingress
  namespace: default
spec:
  rules:
    - host: soft.mxb.cc
      http:
        paths:
          - backend:
              service:
                name: soft-mxb-cc-service
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: soft-mxb-cc-certs

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: soft-mxb-cc-redirectschema
  namespace: default
spec:
  redirectScheme:
    permanent: true
    scheme: https
